# IndianLegal-LLM

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dataprep.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/eval/: golden.jsonl  golden_queries.yaml
data_pipeline/: __init__.py  build_finetune.py  corpus.py  pdf_text.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  PITCH.md  ROADMAP.md  ROLES.md
indianlegal_llm/: __init__.py  _io.py  config.py  pipeline.py  schemas.py
indianlegal_llm/app/: __init__.py  api.py  cli.py  demo.py
indianlegal_llm/evaluation/: __init__.py  baseline_metrics.json  cases.py  golden.py  golden_set.json  harness.py  quality.py  schema.py
indianlegal_llm/finetune/: __init__.py  dataset.py
indianlegal_llm/ingestion/: __init__.py  __main__.py  _errors.py  _http.py  _util.py  aws_s3.py  base.py  cli.py  india_code.py  indian_kanoon.py  local_sc.py  manifest.py  registry.py  stub.py
indianlegal_llm/model/: __init__.py  base.py  registry.py  remote_llm.py  stub.py  transformers_llm.py
indianlegal_llm/processing/: __init__.py  _paragraphs.py  base.py  stub.py
indianlegal_llm/rag/: __init__.py  answerer.py  base.py  citation.py  embedder.py  embedding_retriever.py  lang.py  retriever.py
notebooks/: finetune_qlora.ipynb
scripts/: build_golden_candidates.py  kaggle_run.py
spaces/: README.md  app.py  requirements.txt
tests/: test_api.py  test_data_pipeline.py  test_demo.py  test_eval_gate.py  test_finetune.py  test_golden.py  test_indic.py  test_ingestion.py  test_kaggle_run.py  test_model.py  test_pipeline.py  test_processing.py  test_retriever.py  test_trust.py
tests/fixtures/: hc_metadata_sample.json  india_code_sample.html  indian_kanoon_sample.html  numbered_judgment.txt  sc_metadata_sample.json
