[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indianlegal-llm"
version = "0.1.0"
description = "An open-source, citation-grounded LLM framework for Indian law."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "IndianLegal-LLM contributors" }]
keywords = ["india", "law", "llm", "rag", "citations", "legal-nlp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The walking skeleton has ZERO runtime dependencies (pure stdlib).
dependencies = []

[project.urls]
Homepage = "https://github.com/ChaitanyaKis/IndianLegal-LLM"
Repository = "https://github.com/ChaitanyaKis/IndianLegal-LLM"

[project.optional-dependencies]
# Install per-workstream as stubs are replaced by real implementations.
api = ["fastapi", "uvicorn[standard]"]
demo = ["gradio"]
# Real ingestion: stream parquet from S3 (pyarrow + s3fs/boto3) and fetch web
# sources (httpx). The base model MUST stay Apache-2.0/MIT (CLAUDE.md §2).
ingestion = ["pyarrow", "s3fs", "boto3", "httpx"]
rag = ["sentence-transformers", "faiss-cpu"]
# Real model serving: Phi-4 (MIT, CLAUDE.md §2) 4-bit via bitsandbytes. Loaded
# only on a CUDA GPU; adapters (peft) ship MIT. Base weights are downloaded by the
# user in the cloud and never redistributed by us.
model = ["transformers", "torch", "accelerate", "bitsandbytes", "peft"]
# QLoRA fine-tuning on a free cloud T4 (Qwen3-4B, Apache-2.0). Run IN THE CLOUD;
# see notebooks/finetune_qlora.ipynb. Exports only the MIT LoRA adapter.
finetune = ["unsloth", "trl", "datasets", "transformers", "peft", "bitsandbytes", "accelerate"]
# Build-time data prep (data_pipeline/): permissive PDF text extraction. NOT a
# shipped/inference dep (inference never imports data_pipeline). AGPL PyMuPDF is
# intentionally excluded here — see requirements-dataprep.txt for the opt-in.
dataprep = ["pdfminer.six", "pypdf"]
# Dev/CI tooling. The deterministic gate itself needs only the standard library;
# fastapi + httpx are added so the offline API integration test runs in CI.
dev = ["pytest", "ruff", "black", "pre-commit", "fastapi", "httpx", "pdfminer.six", "pypdf"]

[project.scripts]
indianlegal-llm = "indianlegal_llm.app.cli:main"

[tool.setuptools.packages.find]
include = ["indianlegal_llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
